2012-01-03  Jeff Johnston  <jjohnstn@redhat.com>

	Refactor entire plug-in to org.eclipse.cdt.autotools.ui.

2011-12-16  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/preferences/AutoconfEditorPreferencePage.java (fACVersions): Add
	2.68.
	(fAMVersions): Add 1.11.1.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/text/hover/AutoconfTextHover.java (getIndexedInfoFromDocument): Fix
	code to not compare StringBuffer directly with empty string.
	(getAMDoc): Fix code to use UI plugin for getting local data files.
	(getACDoc): Ditto.
	* macros/ammacros-1.11.1.xml: New file.
	* macros/acmacros-2.68.xml: New file.
	* macros/GFDL-1.3.html: New file.

2011-09-23  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/properties/AutotoolsCategoryPropertyOptionPage.java (createFieldEditors): Add
	flag value support.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/properties/AutotoolsConfigurePrefStore.java (getBoolean): Modify for
	flag value support.

2011-09-19  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/properties/ToolListContentProvider.java (getElements): Add check for
	null.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/editors/automake/StaticTargetRule.java (setPrerequisitePatterns): Fix
	typo in name.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/editors/automake/TargetRule.java (setDependencies): Removed.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/editors/automake/Else.java (setRules): Add
	check for rules being null.
	(getRules): Ditto.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/editors/automake/If.java (getRules): Ditto.
	(setRules): Ditto.

2011-08-24  Jeff Johnston  <jjohnstn@redhat.com>

	Fix for #355134
	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/actions/AbstractAutotoolsHandler.java (execute): New